--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <div class="hyperlink">
     <h1>Гиперссылки с изменением стилей</h1>
     <ul>
-        <li><a href="https://1xbet.kz/" target="_blank">Ссылка на внешний ресурс</a></li>
+        <li><a href="https://sex-studentki.live/" target="_blank">Ссылка на внешний ресурс</a></li>
         <li><a href="https://1xbet.kz/">Первая внутренняя страница</a></li>
         <li><a href="https://1xbet.kz/">Вторая внутренняя страница</a></li>
     </ul>
