--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <h1>Гиперссылки с изменением стилей</h1>
     <ul>
         <li><a href="https://1xbet.kz/" target="_blank">Ссылка на внешний ресурс</a></li>
-        <li><a href="https://sex-studentki.live/">Первая внутренняя страница</a></li>
+        <li><a href="https://1xbet.kz/">Первая внутренняя страница</a></li>
         <li><a href="https://1xbet.kz/">Вторая внутренняя страница</a></li>
     </ul>
 </div>
